--- a/Version/Download/html/index.html
+++ b/Version/Download/html/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='/GigdiSploit-Website'" />
+<meta http-equiv="Refresh" content="0; url='http://gigdisploit.herokuapp.com/GigdiSploit-Website/download.html'" />
